--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ crossterm = "0.28.1"
 strip-ansi-escapes = "0.2.0"
 unicode-width = "0.2.0"
 chrono = { version = "0.4.38", default-features = true, features = ["clock", "std"] }
+similar = "2.7.0"
